--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "body-parser": "^1.20.2",
     "camelcase-keys": "^7.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
